# paRs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
python/pars/: __init__.py
src/: lib.rs
